RESOLVED FIXED191241
RealtimeOutgoingAudioSource subclasses should observe its source when fully constructed
https://bugs.webkit.org/show_bug.cgi?id=191241
Summary RealtimeOutgoingAudioSource subclasses should observe its source when fully c...
youenn fablet
Reported 2018-11-04 19:41:22 PST
Currently, it starts observing when RealtimeOutgoingAudioSource is finished constructing but the final class might not be.
Attachments
Patch (4.37 KB, patch)
2018-11-04 19:44 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-11-04 19:44:00 PST
WebKit Commit Bot
Comment 2 2018-11-05 07:32:13 PST
Comment on attachment 353822 [details] Patch Clearing flags on attachment: 353822 Committed r237802: <https://trac.webkit.org/changeset/237802>
WebKit Commit Bot
Comment 3 2018-11-05 07:32:14 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-11-05 07:33:30 PST
Note You need to log in before you can comment on or make changes to this bug.