Source/WebCore/platform/mediastream/RealtimeOutgoingAudioSource.cpp
@@ -36,8 +36,12 @@
 
 namespace WebCore {
 
-RealtimeOutgoingAudioSource::RealtimeOutgoingAudioSource(Ref<MediaStreamTrackPrivate>&& audioSource)
-    : m_audioSource(WTFMove(audioSource))
+RealtimeOutgoingAudioSource::RealtimeOutgoingAudioSource(Ref<MediaStreamTrackPrivate>&& source)
+    : m_audioSource(WTFMove(source))
+{
+}
+
+void RealtimeOutgoingAudioSource::observeSource()
 {
     m_audioSource->addObserver(*this);
     initializeConverter();
